# STRT

./: .gitignore  index.html  pyproject.toml  requirements.txt
.github/workflows/: fetch-feeds.yml
config/: linkedin-profiles.yaml
css/: styles.css
data/: ball.json  feed.json  news.json  sidebar.json
js/: app.js
scripts/: fetch_feeds.py  fetch_linkedin.py  process_data.py
tests/: test_processing.py
